styles.css
@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@900&family=Hammersmith+One&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-size: 16px;
    background: #FFE6C2;
    color: #191919;
    font-family: 'Hammersmith One', sans-serif;
}

.numbers {
    font-family: 'Geologica', sans-serif;
}


.container {
    max-width: 320px;
    height: 90vh;
    padding: 20px;
    display: flex;
    flex-direction: column;
    margin: 30px auto;
    position: relative;
    border: 1px solid #000;
}

#logo {
    width: 50px;
    height: 50px;
    position: absolute;
    left: 135px;
}

/* Mobile Menu */ 

ul {
    list-style: none;
    height: 100%;
    display: flex;
    align-items: center;
}
  
ul a {
    color: #772f1a;
    font-size: 1.25em;
    text-decoration: none;
}
  
li {
    margin: 0px 5px;
}
  
#menu {
    cursor: pointer;
    float: right;
}
  
.bar {
    width: 35px;
    height: 3px;
    background-color: #191919;
    border-radius: 100px;
    margin: 6px 0;
    transition: 0.4s;
}

.open .bar1 {
    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
    transform: rotate(-45deg) translate(-6px, 6px);
}

.open .bar2 {
    opacity: 0;
}

.open .bar3 {
    -webkit-transform: rotate(45deg) translate(-6px, -8px);
    transform: rotate(45deg) translate(-6px, -8px);
}

.open .mobile-menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
} 

.mobile-menu {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(255,255,255,0.8);
    height: 100%;
    width: 100%;
}

.mobile-menu li {
    margin-bottom: 10px;
    padding: 5px;
}

#menu {
    display: block;
}



#team2 {
    display: none;
}

/* Score Section */
#score {
    display: flex;
    justify-content: center;
    margin-top: 15vh;
} 

.teams {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.team-name {
    font-size: 3em;
}

/* .slider {
    max-width: 320px;
    overflow: hidden;
}

.slider-wrapper{
    position: absolute;
    top: 25%;
    left: 0;
    right: 0;
    display: flex;
    text-align: center;
    width: 300%;
    height: 100%;
    transition: 0,4s ease-in-out;
}

.teams {
    width: 100%;
}

.pagination{
    displaY: flex;
    justify-content: center;
    align-items: center;
    gap: 1em;
    margin: 2em 0;
}

.pagination span {
    background: #191919;
    width: 1em;
    height: 1em;
    border-radius: 50%;
}

.pagination .active {
    width: .8em;
    height: .8em;
    background: transparent;
    border: 2px solid #191919;
} */

.points {
    font-size: 15em;
}


/* Count Section */
#count-container{
    position: absolute;
    bottom: 5%;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
} 

#inning, .count-wrapper{
    width: 300px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 15px;
    border-top: 1px solid #191919;
    border-left: 1px solid #191919;
    border-right: 1px solid #191919;
}


.count-wrapper {
    border-bottom: 1px solid #191919;    
}

